# mygym_loys

./: Cahier-des-charges-du-projet.docx  accounts.txt  acct.c  acct.h  agenda.txt  callbacks.c  callbacks.h  fiche.c  fichejdida.c  notif.c  notif.h  notif.txt  sarah.c  seances_cures.h  seances_cures2.c
Admin/: admin.glade.bak  configure.in  utilisateur.txt
Admin/Admin/: Makefile  Makefile.am  (+7 more)
Admin/Admin/src/: Fonction.txt  Makefile  Makefile.am  Makefile.in  acct.h  activ.c  activ.h  admin  callbacks.c  callbacks.h  event.c  event.h  event.txt  interface.c  interface.c.bak  interface.h  interface.h.bak  main.c  offre.c  offre.h  offre.txt  personne.c  personne.h  users.txt  utilisateur.txt  verifier.c  verifier.h
Admin/Admin/src/.deps/: acct.Po  activ.Po  callbacks.Po  event.Po  offre.Po  personne.Po  verifier.Po
Amine/project4/src/: Makefile.am  callbacks.c  callbacks.h  greeting.c  greeting.h  interface.c  interface.h.bak  project4  utilisateur.txt
Amine/project4/src/.deps/: greeting.Po
Comptes2Oussema/: Structure
Yasminecha/project10/src/: Makefile  Makefile.am  Makefile.in  agenda.c  agenda.h  agenda.txt  callbacks.c  callbacks.h  fiche.c  fiche.txt  interface.c.bak
Yasminecha/project10/src/.deps/: agenda.Po  callbacks.Po  fiche.Po
adh/: config.h
adhfinal/: Makefile.in  aclocal.m4  configure.in  project3.glade.bak
afficheoffre/: project3.glade.bak
afficheoffre/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  interface.c.bak  interface.h  offre.h  project3
afficheoffre/src/.deps/: callbacks.Po
authent/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  project2.glade  project2.gladep.bak
brahim/: rdv.c  rdv.h  suppfiche.c
consultation/: Makefile.am  project3.glade
consultation/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  comptes.txt  interface.c.bak  interface.h  project3  seancee.c  users.txt
consultation/src/.deps/: consultation.Po  consultm.Po  seancee.Po
evenements/: project3.glade
jesus/: consultc.c
modifmdp/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  modifmdp.glade.bak  modifmdp.gladep
project10/: project10.glade  project10.gladep
project12/: Makefile  configure.in  project12.glade.bak
project12/src/: Makefile.am  agenda.c  agenda.h  callbacks.c  callbacks.h  fiche.c  fiche.h  interface.c  project12
project12/src/.deps/: callbacks.Po
project3/: project3.glade  project3.gladep
project4/: config.status  configure  project4.glade
project42/: config.h  project4.glade.bak
projet3/: config.status  configure
sarourakinee/: Makefile  project4.glade  project4.gladep
seanceentrainement/: Makefile  project3.glade
yasmine/: Makefile.in  config.status  configure  project12.glade.bak  project12.gladep
(+318 files in other folders)
